[package]
name = "ospservice"
version = "0.1.0"
authors = ["xStarlord <xstarlord@turbochain.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = "0.3.0"
#lazy_static = "1.4.0"
#phf = { version = "0.8.0", features = ["macros"] }
ospbase = {version = "0.1.0", path = "../ospbase" }
ospdynsvr = {version = "0.1.0", path = "../ospdynlib" }
